2007-09-03  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail/tny-merge-folder.[ch]: added two new functions
	tny_merge_folder_remove_folder
	tny_merge_folder_get_folders

	This is a major API change

2007-08-29  Armin Burgmeier  <armin@openismus.com>

	* libtinymail-camel/tny-camel-account.c
	(tny_camel_account_get_supported_secure_authentication_async_thread):
	Call the prepare_func vfunc before asking camel to ask the server for
	auth types so priv->service is set.

2007-08-31 Dirk-Jan C. Binnema <dirk-jan.binnema@nokia.com>
	
	* Fix tny_camel_msg_header_date_(sent|received):
		- don't try to normalize to GMT (camel already does that)
		- only use Date: for received if not received date is found
	* don't try to disconnect from conic if the IAP == NULL, as that
	  causes a segfault

2007-08-29 Dirk-Jan C. Binnema <dirk-jan.binnema@nokia.com>

	* Set the correct X-Priority: header values, and parse the correct
	  as well (1 (Highest), 2 (High), 3 (Normal), 4 (Low), 5 (Lowest))

2007-08-28  Javier Fernandez Garcia-Boente  <jfernandez@igalia.com>

	* Added a new API function in TnyFolder class: tny_folder_remove_msgs. 
  	This function allows to remove several messages in a single camel 
	operation, avoiding to call excesive times to folder observer 
	notification. 

2007-08-15  Philip Van Hoof  <pvanhoof@gnome.org>

	* Reading dnsmasq's resolv.conf files to know whether or not we are
	initially online or not in libtinymail-maemo/tny-maemo-conic-device.c

2007-08-15  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(tny_maemo_conic_device_force_offline): Fix a compiler warning 
	about an unused variable.

2007-08-15  Philip Van Hoof  <pvanhoof@gnome.org>

	* Improved the TnyMaemoConicDevice a bit
	* Making TnyMaemoConicDevice wait five seconds before proxing the
	emission of a connection-change as a Tinymail signal. It seems that
	there are various states of "being online" for Conic. You are quite